--- a/etc/elk-environment.conf
+++ b/etc/elk-environment.conf
@@ -1,11 +1,15 @@
-#
-# inmate40207 ELKK Starter config file
+#!/bin/bash
 #
 
-# elasticsearch cluster details
+# local network interface identifier
 #
-ES_CLUSTER_URL=http://localhost:9200
+NIC=en0
 
-# kibana details
-# 
-KIBANA_URL=http://localhost:5601
+# local IP address (for Kafka to advertise to clients)
+#
+# Mac OSX:
+LOCAL_IP=$(ifconfig $NIC |grep 'inet ' |awk '{print $2}')
+#
+# RHEL/CentOS/Ubuntu:
+#LOCAL_IP=$(ifconfig $NIC |grep 'inet addr:' |awk '{print $2}' |cut -d : -f 2)
+
